--- a/css/style2.css
+++ b/css/style2.css
@@ -4,6 +4,7 @@
     padding:0px;
     box-sizing: border-box;
     letter-spacing: 1px;
+    font-size: 16px;
 }
 html 
 {
@@ -22,6 +23,8 @@ body
 {
     grid-area: menu;
     background-color: #C09F80;
+    padding-right: 30px;
+    padding-top: 10px;
 }
 #content 
 {
@@ -50,10 +53,51 @@ body
 {
     height:100%;
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr;
+    grid-template-columns: 1fr 6fr 1.5fr;
     grid-template-rows: 2fr 7fr 1fr;
     grid-template-areas:
     "heading heading heading"
     "menu  content sidebar"
     "footer  footer footer";
+}
+#heading 
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left:10px;
+    padding-right:10px;
+}
+#heading>ul 
+{
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+}
+#heading>ul>li>a:link 
+{
+    text-decoration: none;
+    color:#FFE4C4;
+    text-transform: uppercase;
+    font-size: 1.2em;
+}
+#heading>h1 
+{
+    color:#FFE4C4;
+    font-size: 2em;
+    text-shadow: 3px 3px 7px white;
+}
+#menu>ul>li 
+{
+    background-color: #FFE4C4;
+    margin-bottom: 10px;
+    padding:5px 10px;
+    border-radius:0px 10px 10px 0px;
+    box-shadow: 3px 3px 5px black;
+}
+#menu>ul>li>a:link 
+{
+    text-decoration: none;
+    font-weight: bold;
+    color:brown;
 }
