--- a/css/style2.css
+++ b/css/style2.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Roboto:wght@900&display=swap');
 *
 {
     margin:0px;
     padding:0px;
     box-sizing: border-box;
     letter-spacing: 1px;
-    font-size: 16px;
+    font-size: 14px;
+    font-family: Montserrat, verdana, arial, sans-serif;
 }
 html 
 {
@@ -18,6 +20,14 @@ body
 {
     background-color: #763241;
     grid-area: heading;
+    /* top:0px;
+    left:0px;
+    display: sticky; */
+    
+}
+#heading>h1 
+{
+    font-family: Roboto, verdana, aerial;
 }
 #menu 
 {
@@ -31,6 +41,23 @@ body
     grid-area: content;
     height:100%;
     background-color: bisque;
+    padding:20px;
+
+}
+#content>h2 
+{
+    font-size: 1.5em;
+    text-transform: uppercase;
+    border-bottom: 1px solid brown;
+    margin-bottom: 10px;
+    font-family: Roboto, verdana, aerial;
+}
+#content>p 
+{
+    text-align: justify;
+    line-height: 150%;
+    text-indent:25px;
+    margin-bottom: 10px;
 }
 #sidebar 
 {
@@ -74,18 +101,21 @@ body
     display: flex;
     gap: 10px;
 }
-#heading>ul>li>a:link 
+#heading>ul>li>a:link ,#heading>ul>li>a:visited
 {
     text-decoration: none;
     color:#FFE4C4;
     text-transform: uppercase;
     font-size: 1.2em;
+    font-family: Roboto, verdana, aerial;
+    letter-spacing: 2px;
 }
 #heading>h1 
 {
     color:#FFE4C4;
     font-size: 2em;
     text-shadow: 3px 3px 7px white;
+    font-family: Roboto, verdana, aerial;
 }
 #menu>ul>li 
 {
@@ -100,4 +130,26 @@ body
     text-decoration: none;
     font-weight: bold;
     color:brown;
+}
+.news 
+{
+    background-color: #d9c5b2;
+    margin:10px;
+    padding:10px;
+}
+.news>h3 
+{
+    text-transform: uppercase;
+    font-size: 1.2em;
+    border-bottom:1px solid black;
+    margin-bottom:5px;
+}
+.news>p>a:link 
+{
+    margin-top:10px;
+    background-color: #763241;
+    color:white;
+    padding:10px;
+    display: block;
+    text-transform: uppercase;
 }
