--- a/css/style2.css
+++ b/css/style2.css
@@ -20,10 +20,9 @@ body
 {
     background-color: #763241;
     grid-area: heading;
-    /* top:0px;
-    left:0px;
-    display: sticky; */
-    
+    position:sticky;
+    top: 0px;
+    left:0px; 
 }
 #heading>h1 
 {
@@ -35,6 +34,7 @@ body
     background-color: #C09F80;
     padding-right: 30px;
     padding-top: 10px;
+    height: 600px;
 }
 #content 
 {
@@ -42,8 +42,10 @@ body
     height:100%;
     background-color: bisque;
     padding:20px;
-
-}
+    height:600px;
+    overflow: scroll;
+    scrollbar-width: none;
+}  
 #content>h2 
 {
     font-size: 1.5em;
@@ -51,6 +53,12 @@ body
     border-bottom: 1px solid brown;
     margin-bottom: 10px;
     font-family: Roboto, verdana, aerial;
+}
+#courses>div>img 
+{
+    height:100px;
+    width:100px;
+    border-radius: 100px;
 }
 #content>p 
 {
@@ -64,12 +72,16 @@ body
     grid-area: sidebar;
     background-color: #C09F80;
     height:100%;
+    height: 600px;
 }
 #footer 
 {
     background-color: #565656;
     padding:20px;
     grid-area: footer;
+    position:sticky;
+    bottom: 0px;
+    left:0px; 
 }
 #footer p 
 {
